# kaleidoscope

./: CMakeLists.txt  PROPOSAL.md  README.md
apps/: cinder_app_main.cc
include/core/: button.h  color_selector.h  command_type.h  constants.h  saver.h  slider.h  stroke.h  stroke_maker.h
include/visualizer/: button.h  color_selector.h  kaleidoscope_app.h  sketchpad.h  slider.h  toolbar.h
src/core/: button.cc  color_selector.cc  saver.cc  slider.cc  stroke_maker.cc
src/visualizer/: button.cc  color_selector.cc  kaleidoscope_app.cc  sketchpad.cc  slider.cc  toolbar.cc
test/: button_test.cc  color_selector_test.cc  sample_test.cc  slider_test.cc  stroke_maker_test.cc  toolbar_test.cc
